--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "target": "es5",
     "outDir": "lib",
     "declaration": true,
-    "inlineSourceMap": true
+    "inlineSources": true,
+    "sourceMap": true
   },
   "include": ["src/index.tsx"]
 }
